# Version 1.4

* Fixed bug that was causing all activerecord attributes be saved as nil
* Avoid symbol injection on forms

# Version 1.3

* Removed deprecated methods in version 1.2
* Added persisted? header and a generator

# Version 1.2

* No more class attributes, just define a headers method

# Version 1.1

* Rails 3 compatibility

# Version 1.0

* Rename to mail_form and launch Rails 2.3 branch

# Version 0.4

* Added support to template

# Version 0.3

* Added support to symbols on :sender, :subject and :recipients
* Added support to symbols on :validate

# Version 0.2

* Added support to request objects and append DSL
* Added support to :attachments (thanks to @andrewtimberlake)

# Version 0.1

* First release