@@ -2,19 +2,9 @@ language: ruby
 rvm:
   - 2.0.0
   - 1.9.3
-  - ree
-  - jruby-18mode
 gemfile:
-  - gemfiles/Gemfile-rails.3.0.x
-  - gemfiles/Gemfile-rails.3.1.x
   - gemfiles/Gemfile-rails.3.2.x
   - Gemfile
-matrix:
-  exclude:
-    - rvm: ree
-      gemfile: Gemfile
-    - rvm: jruby-18mode
-      gemfile: Gemfile
 notifications:
   email: false
   campfire:
