@@ -1,9 +1,0 @@
-source 'https://rubygems.org'
-
-gem 'mail_form', :path => '..'
-
-gem 'rake'
-gem 'rdoc'
-
-gem 'actionmailer', '~> 3.0.0'
-gem 'activemodel', '~> 3.0.0'
